
TODO:
	After using window.maximize, the system menu doesn't track maximized /
	restore state correctly (Win)

FEATURE IDEAS:
	allow to render a neko string buffer on the window
	pop-up menu support

2007-??-?? : 1.0.9
	fixed int return type in AS2
	now user new neko "ui" library for synchronization
	fixed memory bug with OSX bundles
	added client initialization (:init call)

2007-03-08 : 1.0.8
	window msg hook fix and extension (Win)

2007-03-07 : 1.0.7
	added Window.getHandle
	added window message hook support (Win)

2007-03-04 : 1.0.6
	top-most and no-taskbar-icon support (Win)
	misc. Actionscript API fixes

2006-11-05 : 1.0.5
	added swhx.Application.init minimal version argument
	added swhx.Flash.onSourceLoaded event
	added swroot and swindex value options to boot-loader list.pinfo (Mac)
	fixed LoadVariables error on using relative paths
	fixed UI freeze with Adobe Flash player 8
	removed worker-threads: Neko/haXe is now multithreaded
	fixed get url 'post' malfunction
	fixed window-size issue on restore (Win)
	implemented rudimentary transparent windowing
	detect ctrl-click, and treat as right-click (Mac)

2006-10-09 : 1.0.5 (Test Release)
	fixed Windows not being able to be closed from Flash.
	fixed boot loader icon not showing in window caption bar (Win)
	added Window.maximize property, for code driven maximize/restore
	added Window.minimize property, for code driven minimize/restore
	added Window.drag() for code driven Window dragging
	added Window.resize(direction) for code driven Window resizing
	added 'plain' window style: 1 pixel black border, no caption
	implemented worker thread support
	progress dialogs should now be feasible using worker thread
	fixed OSX 10.3.9 issues

2006-09-28 : 1.0.4
	fixed Sample preferences loading bug
	fixed window.title bug

2006-09-28 : 1.0.3
	added 'title' property on window
	fixed mouse wheel locality (win)
	added Sampler application

2006-09-21: 1.0.2
	fixed UTF8 issues

2006-09-21: 1.0.1